# triangulated_paper_modeling

./: CMakeLists.txt  README.md  main.cpp
input/: example1.json  example2.json  example3.json  example4.json
src/: CMakeLists.txt  geometry.cpp  geometry.hpp  paper.cpp  paper.hpp  permution.cpp  permution.hpp  utils.cpp  utils.hpp
txt_info/: paper_info2D.txt  paper_info3D.txt
visualizer/: visualizer2D.py  visualizer3D.py
